--- a/src/main/java/ch/zhaw/roma/view/EditRoMaNote.fxml
+++ b/src/main/java/ch/zhaw/roma/view/EditRoMaNote.fxml
@@ -45,14 +45,14 @@
                                 <Label text="PLZ" GridPane.rowIndex="5"/>
                                 <Label text="Stadt" GridPane.rowIndex="6"/>
                                 <Label text="Land" GridPane.rowIndex="7"/>
-                                <Label fx:id="greeting" text="blabla" GridPane.columnIndex="1"/>
-                                <Label fx:id="firstName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                <Label fx:id="lastName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                                <Label fx:id="street1" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-                                <Label fx:id="street2" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-                                <Label fx:id="zipCode" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
-                                <Label fx:id="city" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
-                                <Label fx:id="country" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+                                <Label fx:bookId="greeting" text="blabla" GridPane.columnIndex="1"/>
+                                <Label fx:bookId="firstName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                <Label fx:bookId="lastName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                <Label fx:bookId="street1" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                                <Label fx:bookId="street2" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+                                <Label fx:bookId="zipCode" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+                                <Label fx:bookId="city" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+                                <Label fx:bookId="country" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
                             </children>
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
@@ -150,8 +150,8 @@
                                 <Label text="Titel"/>
                                 <Label text="ISBN" GridPane.rowIndex="1"/>
                                 <Label text="Periode" GridPane.rowIndex="2"/>
-                                <Label fx:id="title" text="Label" GridPane.columnIndex="1"/>
-                                <Label fx:id="ISBN" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                <Label fx:bookId="title" text="Label" GridPane.columnIndex="1"/>
+                                <Label fx:bookId="ISBN" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                             </children>
                         </GridPane>
                         <GridPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0"
@@ -175,11 +175,11 @@
                                 <Label text="eBook" GridPane.columnIndex="2"/>
                                 <Label text="LP CHF" GridPane.rowIndex="1"/>
                                 <Label text="LP EUR" GridPane.rowIndex="2"/>
-                                <Label fx:id="priceHardCoverCHF" text="Label" GridPane.columnIndex="1"
+                                <Label fx:bookId="priceHardCoverCHF" text="Label" GridPane.columnIndex="1"
                                        GridPane.rowIndex="1"/>
-                                <Label fx:id="priceHardCoverEUR" text="Label" GridPane.columnIndex="1"
+                                <Label fx:bookId="priceHardCoverEUR" text="Label" GridPane.columnIndex="1"
                                        GridPane.rowIndex="2"/>
-                                <Label fx:id="priceEbook" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+                                <Label fx:bookId="priceEbook" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
                             </children>
                         </GridPane>
                     </children>
@@ -237,10 +237,10 @@
                 </Label>
                 <HBox prefHeight="174.0" prefWidth="613.0">
                     <children>
-                        <TableView fx:id="soldBooks" prefHeight="179.0" prefWidth="184.0">
+                        <TableView fx:bookId="soldBooks" prefHeight="179.0" prefWidth="184.0">
                             <columns>
-                                <TableColumn fx:id="yearColumnSB" prefWidth="75.0" text="Jahr"/>
-                                <TableColumn fx:id="amountColumnSB" prefWidth="75.0" text="Exemplare"/>
+                                <TableColumn fx:bookId="yearColumnSB" prefWidth="75.0" text="Jahr"/>
+                                <TableColumn fx:bookId="amountColumnSB" prefWidth="75.0" text="Exemplare"/>
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
@@ -314,7 +314,7 @@
                                 <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                                 <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
                                 <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-                                <Label fx:id="royalityQote" text="Label" GridPane.columnIndex="2"
+                                <Label fx:bookId="royalityQote" text="Label" GridPane.columnIndex="2"
                                        GridPane.rowIndex="2"/>
                                 <Label text="Label" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
                                 <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
@@ -357,10 +357,10 @@
                 </Label>
                 <HBox prefHeight="95.0" prefWidth="800.0">
                     <children>
-                        <TableView fx:id="settlementOverview" prefHeight="95.0" prefWidth="239.0">
+                        <TableView fx:bookId="settlementOverview" prefHeight="95.0" prefWidth="239.0">
                             <columns>
-                                <TableColumn fx:id="yearColumnSM" prefWidth="168.0" text="Abrechnung per"/>
-                                <TableColumn fx:id="amountColumnSM" prefWidth="70.0" text="EUR"/>
+                                <TableColumn fx:bookId="yearColumnSM" prefWidth="168.0" text="Abrechnung per"/>
+                                <TableColumn fx:bookId="amountColumnSM" prefWidth="70.0" text="EUR"/>
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
