--- a/src/main/resources/view/EditAuthorView.fxml
+++ b/src/main/resources/view/EditAuthorView.fxml
@@ -1,143 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="503.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <VBox prefHeight="528.0" prefWidth="317.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="299.0" minWidth="10.0" prefWidth="111.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="451.0" minWidth="10.0" prefWidth="231.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label text="Anrede" GridPane.halignment="RIGHT">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Vorname" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Nachname" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Strasse / Nr." GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Adresszusatz 1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Adresszusatz 2" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Postleitzahl" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Stadt" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Land" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="E-Mail" GridPane.halignment="RIGHT" GridPane.rowIndex="9">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Webseite" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Tel. Mobil" GridPane.halignment="RIGHT" GridPane.rowIndex="11">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Tel Geschäftlich" GridPane.halignment="RIGHT" GridPane.rowIndex="12">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Tel.privat" GridPane.halignment="RIGHT" GridPane.rowIndex="13">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <ComboBox prefHeight="26.0" prefWidth="234.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="10" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="11" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="12" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="13" />
-                  <ComboBox prefHeight="26.0" prefWidth="119.0" GridPane.columnIndex="1" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </GridPane>
-            <ButtonBar prefHeight="40.0" prefWidth="200.0">
-              <buttons>
-                <Button mnemonicParsing="false" text="Speichern" />
-                  <Button mnemonicParsing="false" text="Abbrechen" />
-              </buttons>
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </ButtonBar>
-         </children>
-      </VBox>
-   </children>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="503.0"
+            prefWidth="362.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1"
+fx:controller="ch.zhaw.roma.controller.EditAuthorViewController">
+    <children>
+        <VBox prefHeight="528.0" prefWidth="317.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0"
+              AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <GridPane>
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="299.0" minWidth="10.0" prefWidth="111.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="451.0" minWidth="10.0" prefWidth="231.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <children>
+                        <Label text="Anrede" GridPane.halignment="RIGHT">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Vorname" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Nachname" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Strasse / Nr." GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Adresszusatz 1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Adresszusatz 2" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Postleitzahl" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Stadt" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Land" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="E-Mail" GridPane.halignment="RIGHT" GridPane.rowIndex="9">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Webseite" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Tel. Mobil" GridPane.halignment="RIGHT" GridPane.rowIndex="11">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Tel Geschäftlich" GridPane.halignment="RIGHT" GridPane.rowIndex="12">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label text="Tel.privat" GridPane.halignment="RIGHT" GridPane.rowIndex="13">
+                            <GridPane.margin>
+                                <Insets right="5.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+                        <ComboBox prefHeight="26.0" prefWidth="234.0" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="9"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="10"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="11"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="12"/>
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="13"/>
+                        <ComboBox prefHeight="26.0" prefWidth="119.0" GridPane.columnIndex="1"/>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </VBox.margin>
+                </GridPane>
+                <ButtonBar prefHeight="40.0" prefWidth="200.0">
+                    <buttons>
+                        <Button mnemonicParsing="false" text="Speichern"/>
+                        <Button mnemonicParsing="false" text="Abbrechen"/>
+                    </buttons>
+                    <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </VBox.margin>
+                </ButtonBar>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
